--- a/Code.ipynb
+++ b/Code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Instagram-Photo-Collage"
+    "# Collage-Maker"
    ]
   },
   {
